@@ -1,0 +1,18 @@
+#include "CRETreeItemQuest.h"
+#include "CREQuestPanel.h"
+
+CRETreeItemQuest::CRETreeItemQuest(const Quest* quest)
+{
+    myQuest = quest;
+}
+
+CRETreeItemQuest::~CRETreeItemQuest()
+{
+}
+
+void CRETreeItemQuest::fillPanel(QWidget* panel)
+{
+    Q_ASSERT(myQuest);
+    CREQuestPanel* p = static_cast<CREQuestPanel*>(panel);
+    p->setQuest(myQuest);
+}
