@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Show existing quests, and their various steps.
+Nicolas Weeger 2010-05-15
+
 Fix typedef definition issue when building CRE.
 Nicolas Weeger 2010-05-15
 
